tests/paczka1/small_fuzzy/83597559.err
Error in line 5: MPO6ctZas A25 51,6
Error in line 11: A25 A891 278,3
Error in line 14: A25 A368 8,9
